[package]
name = "keylist"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", optional = true}

[dev-dependencies]
serde_test = "*"