[package]
name = "keylist"
version = "0.2.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"
description = "Elixir keyword list in Rust"
repository = "https://github.com/thomas9911/keylist"
license = "Unlicense"
keywords = ["lists", "tuples", "map"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
serde = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}

[dev-dependencies]
serde_test = "1.0"

[[example]]
name = "serde"
required-features = ["serde", "serde_json"]